--- a/test.html
+++ b/test.html
@@ -10,17 +10,40 @@
 </head>
 <body>
 
-    <div>
-        <h1>h1</h1>
-        <h2>h2</h2>
-        <h3>h3</h3>
-        <h5>h5</h5>
-        <h6>h6</h6>
-    </div>
 
-    <div class="cat" >
-        <img src="img/pngwing.com.png">
-    </div>
+    <div class="parent">
+
+        <div class="recl">
+            <h3>//...//</h3>
+        </div>
+
+        <div>
+            <div>
+                <h1>h1</h1>
+                <h2>h2</h2>
+                <h3>h3</h3>
+                <h5>h5</h5>
+                <h6>h6</h6>
+            </div>
+
+            <div>
+                <img src="img/pngwing.com.png">
+            </div>
+
+            <div>
+
+                <p>this is a text in teg </p>
+                <p>size.............24px </p>
+                <p>shadow..........green </p>
+                <p>text..........oblique </p>
+
+            </div>
+
+        </div>
+
+        <div class="recl">
+            <h3>//...//</h3>
+        </div>
 
     </div>
 
