--- a/test.html
+++ b/test.html
@@ -37,6 +37,11 @@
                 <p>shadow..........green </p>
                 <p>text..........oblique </p>
 
+                <a href="BS.html">Поддержать проект</a>
+
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+
+
             </div>
 
         </div>
